update the configuration

--- a/.env
+++ b/.env
@@ -36,6 +36,7 @@ kxi_port_gw_http=8080
 kxi_port_da=5080
 kxi_port_sm=10001
 kxi_port_rt=5000
+kxi_port_rt_pull_rep=5001
 kxi_port_rt_push_rep=5002
 kxi_port_sp=5004
 
@@ -47,3 +48,4 @@ kxi_rt_disk=90
 kxi_rt_heartbeat=10000
 kxi_rt_log_size=5
 kxi_rt_chunk_size=1
+RT_PUB_TOPIC="data"
