--- a/.env
+++ b/.env
@@ -27,6 +27,7 @@ kxi_dir_logs_rt="./data/logs/rt"
 kxi_dir_sidecar_cfg="./config/metrics-cfg"
 kxi_dir_pkgs="./config/packages"
 kxi_dir_sp="./data/sp"
+#GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH="./config/grafana-cfg/grafana/dashboards"
 
 # Networking
 kxi_port_rc=5040
