--- a/.env
+++ b/.env
@@ -24,9 +24,10 @@ kxi_dir_config="./config"
 kxi_dir_db="./data/db"
 kxi_dir_logs="./data/logs"
 kxi_dir_logs_rt="./data/logs/rt"
+kxi_dir_logs_sp="./data/logs/sp"
 kxi_dir_sidecar_cfg="./config/metrics-cfg"
 kxi_dir_pkgs="./config/packages"
-kxi_dir_sp="./data/sp"
+#kxi_dir_sp="./data/sp"
 #GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH="./config/grafana-cfg/grafana/dashboards"
 
 # Networking
@@ -34,7 +35,11 @@ kxi_port_rc=5040
 kxi_port_agg=5060
 kxi_port_gw_qipc=5050
 kxi_port_gw_http=8080
+kxi_port_gw_metrics=8081
 kxi_port_da=5080
+kxi_port_da_rdb=5081
+kxi_port_da_idb=8082
+kxi_port_da_hdb=8083
 kxi_port_sm=10001
 kxi_port_rt=5000
 kxi_port_rt_pull_rep=5001
