refactor runbook structure

--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ kxi_dir_db="./data/db"
 kxi_dir_logs="./data/logs"
 kxi_dir_logs_rt="./data/logs/rt"
 kxi_dir_logs_sp="./data/logs/sp"
-kxi_dir_sidecar_cfg="./config/metrics-cfg"
+kxi_dir_sidecar_cfg="./config/metrics/sidecar"    #"./config/metrics-cfg"
 kxi_dir_pkgs="./config/packages"
 
 # Networking
