update for metrics

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 # Globals
 kxi_registry=portal.dl.kx.com
-kxi_db_release=1.13.2
-kxi_rt_release=1.13.2
+kxi_db_release=1.13.0
+kxi_rt_release=1.13.0
 kxi_sidecar_release=1.13.0
-sp_py_version=1.13.2
+sp_py_version=1.13.0
 kxi_log_format=JSON
 kxi_log_level=INFO
-kxi_apis=".kxi.sql,.kxi.qsql,.kxi.sql2"
+kxi_apis=".kxi.sql,.kxi.qsql,.kxi.sql2,.kxi.metrics"
 
 # Images
 kxi_img_gw=${kxi_registry}/kxi-sg-gw:${kxi_db_release}
@@ -36,8 +36,8 @@ kxi_port_gw_http=8080
 kxi_port_gw_metrics=8081
 kxi_port_da=5080
 kxi_port_da_rdb=5081
-kxi_port_da_idb=8082
-kxi_port_da_hdb=8083
+kxi_port_da_idb=5082
+kxi_port_da_hdb=5083
 kxi_port_sm=10001
 kxi_port_rt=5000
 kxi_port_rt_pull_rep=5001
