--- a/compose.yaml
+++ b/compose.yaml
@@ -5,30 +5,31 @@ networks:
     driver: bridge
 
 services:
-  sp-worker:
-    image: ${kxi_img_sp}
-    hostname: kxi-sp
-    restart: "always"
-    depends_on:
-      - kxi-rt   
-    environment:
-      - KXI_LOG_LEVELS=default:info       
-      - KXI_SP_SPEC=/mnt/config/sp/taq.py  # Python file where our Kafka stream is coming from
-      - KXI_PORT=${kxi_port_sp}
-      - KX_KURL_DISABLE_AUTO_REGISTER=1
-      - RT_TOPIC_PREFIX=rt-
-      - RT_STREAM=data
-    ports:
-      - ${kxi_port_sp}:${kxi_port_sp}
-    volumes:
-      - ${kxi_dir_lic}:/opt/kx/lic 
-      - ${kxi_dir_config}:/mnt/config 
-      - ${kxi_dir_logs_sp}:/sp 
-    networks: [kx]
-    env_file:
-      - .env 
-    stdin_open: true
-    tty: true     
+  # # Moved to compose-stream.yaml to separate streaming from the main architecture
+  # sp-worker:
+  #   image: ${kxi_img_sp}
+  #   hostname: kxi-sp
+  #   restart: "always"
+  #   depends_on:
+  #     - kxi-rt   
+  #   environment:
+  #     - KXI_LOG_LEVELS=default:info       
+  #     - KXI_SP_SPEC=/mnt/config/sp/taq.py  # Python file where our Kafka stream is coming from
+  #     - KXI_PORT=${kxi_port_sp}
+  #     - KX_KURL_DISABLE_AUTO_REGISTER=1
+  #     - RT_TOPIC_PREFIX=rt-
+  #     - RT_STREAM=data
+  #   ports:
+  #     - ${kxi_port_sp}:${kxi_port_sp}
+  #   volumes:
+  #     - ${kxi_dir_lic}:/opt/kx/lic 
+  #     - ${kxi_dir_config}:/mnt/config 
+  #     - ${kxi_dir_logs_sp}:/sp 
+  #   networks: [kx]
+  #   env_file:
+  #     - .env 
+  #   stdin_open: true
+  #   tty: true     
 
   kxi-rc:
     image: ${kxi_img_rc}
@@ -108,7 +109,7 @@ services:
       - RT_TOPIC_PREFIX=rt-
       - RT_REPLICAS=1
       - KXI_SECURE_ENABLED=0
-      #- KXI_LATE_DATA=true
+      - KXI_LATE_DATA=true
       - KXI_CONFIG_FILE=/mnt/config/metrics/sidecar/da-config.json      # For gathering metrics
       #- KXI_DA_START_SIDECARS=true
       # Package with custom APIs 
@@ -145,7 +146,7 @@ services:
       - RT_STREAM=data
       - RT_LOG_PATH=/mnt/logs/sm   
       - RT_REPLICAS=1
-      #- KXI_LATE_DATA=true
+      - KXI_LATE_DATA=true
     ports:
       - ${kxi_port_sm}:${kxi_port_sm}
     networks: [kx]
