update readme & env

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ kxi_sidecar_release=1.13.0
 sp_py_version=1.13.0
 kxi_log_format=JSON
 kxi_log_level=INFO
-kxi_apis=".kxi.sql,.kxi.qsql,.kxi.sql2,.kxi.metrics"
+kxi_apis=".kxi.sql,.kxi.qsql,.kxi.sql2"
 
 # Images
 kxi_img_gw=${kxi_registry}/kxi-sg-gw:${kxi_db_release}
