update packaging contents and API's with new framework

--- a/config/packages/custom/1.0.0/manifest.json
+++ b/config/packages/custom/1.0.0/manifest.json
@@ -10,7 +10,7 @@
         ]
     },
     "entrypoints": {
-        "aggregator": "agg.q",
-        "data-access": "da.q"
+        "aggregator": "myUDA.q",
+        "data-access": "myUDA.q"
     }
 }
